--- a/weather-react/src/App.css
+++ b/weather-react/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.open-source {
+  font: size 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +39,6 @@
   to {
     transform: rotate(360deg);
   }
+
+  
 }
