added component for weather icon

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   margin: 0 auto;
   margin-top: 20px;
   max-width: 700px;
-  max-height: 100px;
+  max-height: 400px;
   
 }
 
@@ -40,6 +40,7 @@
   list-style: none;
   margin: 0 auto;
   font-weight: bolder;
+  font-size: larger;
   
  
 }
@@ -52,8 +53,22 @@
 .weather span {
   font-size: 25px;
   font-weight: bolder;
+  margin-top: 30px;
 }
 
 .weather form {
   margin-bottom: 10px;
 }
+
+.weather canvas {
+  height: 64px;
+  width: 64px;
+  margin-top: 10px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+#temp-display {
+  font-size: 60px;
+}
+
